--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,9 @@
     "name": "Pattern Kit",
     "version": "0.0.1",
     "require": {
-    	"silex/silex": "1.0.*",
-    	"twig/twig": "dev-master",
-    	"twig/extensions": "dev-master",
+        "silex/silex": "1.0.*-dev",
+        "twig/twig": "1.x-dev",
+        "twig/extensions": "dev-master",
         "symfony/twig-bridge": "2.1.*"
     },
     "minimum-stability": "dev",
